# LLM_Council_ApplimentAI_Enhanced

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY_HF.md  Dockerfile  HF_README.md  README.md  pyproject.toml  test_consolidated.sh  test_features.sh
backend/: classification.py  config.py  connectivity.py  council.py  main.py  multi_round.py  personalities.py  query_classifier.py  search.py
backend/documents/: __init__.py  manager.py  parser.py
backend/storage/: __init__.py  database.py  json_storage.py  models.py  sql_storage.py
backend/tools/: __init__.py
docs/: ANALYSIS_REPORT.md  CONSOLIDATION_NOTES.md  FEATURES.md  REAL_COMPARATIVE_ANALYSIS.md  TEST_PLAN.md  TEST_RESULTS.md
frontend/: index.html
frontend/src/: App.css  api.js  index.css
